status/fe/felix/0.2.0/macos/darwin-23.4.0/gnat=10.3.2/felix-0.2.0.yaml.log
Test ran at 2024-05-12 00:48:45.143856+00:00

SOLUTION:
felix=0.2.0: X/Open Native Language System (NLS) for Ada
Origin: commit 7409bde64df3467f6d8b6aceb96eba2aac920014 from https://github.com/lkujaw/felix.git
Properties:
   Author: Lev Kujawski
   Description: X/Open Native Language System (NLS) for Ada
   case Distribution is
      when Msys2 => Environment: C_INCLUDE_PATH=${C_INCLUDE_PATH}:${DISTRIB_ROOT}/usr/include/
   case OS is
      when Windows => GPR External: SYSTEM_API := WIN32
      when others => GPR External: SYSTEM_API := POSIX
   License: MIT-0
   Maintainer: Lev Kujawski <int21h@mailbox.org>
   Maintainers_Logins: lkujaw
   Name: felix
   Tag: ada1995
   Tag: i18n
   Tag: nls
   Tag: localization
   Tag: localisation
   Tag: l10n
   Version: 0.2.0
   Website: https://github.com/lkujaw/felix
Dependencies (direct):
   case OS is
      when Windows => msys2_runtime>=3.0


LOG:
Note: Deploying felix=0.2.0...
Note: Building felix/felix.gpr...
Setup
   [mkdir]        object directory for project Felix
   [mkdir]        library directory for project Felix
Compile
   [C]            cio.c
   [C]            nls.c
   [Ada]          stantext.adb
   [Ada]          cstandio.adb
In file included from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/_stdio.h:68,
                 from /Users/runner/.config/alire/cache/dependencies/gnat_native_10.3.2_e112fd3f/lib/gcc/x86_64-apple-darwin19.6.0/10.3.0/include-fixed/stdio.h:78,
                 from /Users/runner/work/alire-crates-ci/alire-crates-ci/test/60ccce0c-7322-4270-acb4-e9475bf189d2/felix_0.2.0_7409bde6/src/cio.c:28:
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:30: error: missing ')' after "__has_attribute"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                              ^~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:32: error: missing binary operator before token "unsafe_buffer_usage"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                                ^~~~~~~~~~~~~~~~~~~
In file included from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/_locale.h:40,
                 from /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/locale.h:40,
                 from /Users/runner/work/alire-crates-ci/alire-crates-ci/test/60ccce0c-7322-4270-acb4-e9475bf189d2/felix_0.2.0_7409bde6/src/nls.c:28:
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:30: error: missing ')' after "__has_attribute"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                              ^~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/cdefs.h:554:32: error: missing binary operator before token "unsafe_buffer_usage"
  554 | #if __has_cpp_attribute(clang::unsafe_buffer_usage)
      |                                ^~~~~~~~~~~~~~~~~~~

   compilation of nls.c failed
   compilation of cio.c failed

gprbuild: *** compilation phase failed
stderr: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/60ccce0c-7322-4270-acb4-e9475bf189d2/felix_0.2.0_7409bde6/felix.gpr"] exited with code 4
ERROR: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/60ccce0c-7322-4270-acb4-e9475bf189d2/felix_0.2.0_7409bde6/felix.gpr"] exited with code 4
stderr: ALIRE.CHECKED_ERROR
stderr: Command ["gprbuild", "-s", "-j0", "-p", "-P", "/Users/runner/work/alire-crates-ci/alire-crates-ci/test/60ccce0c-7322-4270-acb4-e9475bf189d2/felix_0.2.0_7409bde6/felix.gpr"] exited with code 4
stderr: raised ALIRE.CHECKED_ERROR : alire-stored-error:1
Load address: 0x100815000
Call stack traceback locations:
0x10111d415 0x100df0e83 0x101003df9 0x101004581 0x100f64ac3 0x100f62f99 0x100f7f873 0x100fcbdc1 0x100fca81a 0x100f7f9b8 0x100f63349 0x1008749c1 0x100885578 0x10088a01c 0x10091005c 0x10091b3b8 0x100816605 0x100819914


Warning: felix=0.2.0 successfully retrieved but its build failed.
There are no dependencies.
ERROR: Build ended with errors
